# 4DOF-Telemanipulation-System

./: .gitignore  LICENSE  README.md
src/bot/: CMakeLists.txt  package.xml
src/bot/config/: bot_controllers.yaml
src/bot/launch/: rsp.launch.py  rviz.launch.py  sim.launch.py
src/bot/urdf/: bot.urdf.xacro  bot1.urdf.xacro  bot_gazebo.xacro  bot_ros2_control.xacro
src/gesture_control_pkg/: package.xml  setup.cfg  setup.py
src/gesture_control_pkg/gesture_control_pkg/: gesture_controller.py  movements.py  remote.py  udp_bridge.py
